# CS4280-Project-2

./: CMakeLists.txt  Compiler Graph.xlsx  FileInputFunction.cpp  FileInputFunction.h  P1_test.fs17  P3 Requirements.docx  README.txt  Semantics.cpp  Semantics.h  filterFunction.cpp  filterFunction.h  main.cpp  node.cpp  node.h  out.asm  output.preorder.txt  parser.cpp  parser.h  scanner.cpp  scanner.h  targetLanguage.cpp  targetLanguage.h  testparser.cpp  testparser.h  testscanner.cpp  testscanner.h  token.cpp  token.h
